--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>喵哥在线文生图</h1>
+        <h1>喵哥在线文生图，如遇到无法生成图片，请您挂代理即可，api接口被墙，请各位谅解！</h1>
         <p>请输入英文描述，建议结合GPT 生成英文的提示词使用，中文的效果不是很理想，但是最好是英文啦！生成图片：</p>
         <input type="text" id="description" placeholder="例如：A girl walking on the beach">
         <br><br>
