--- a/index.html
+++ b/index.html
@@ -126,6 +126,46 @@
                 background: linear-gradient(135deg, #fbc2eb, #a6c1ee);
             }
         }
+
+        /* 自适应布局 */
+        @media screen and (max-width: 768px) {
+            h1 {
+                font-size: 28px;
+            }
+
+            input[type="text"] {
+                width: 90%;
+            }
+
+            button {
+                width: 90%;
+                font-size: 16px;
+            }
+
+            .container {
+                padding: 20px;
+                width: 100%;
+                max-width: 500px;
+            }
+        }
+
+        /* 手机屏幕调整 */
+        @media screen and (max-width: 480px) {
+            h1 {
+                font-size: 22px;
+            }
+
+            input[type="text"], button {
+                width: 90%;
+                font-size: 16px;
+            }
+
+            .container {
+                padding: 15px;
+                width: 100%;
+                max-width: 400px;
+            }
+        }
     </style>
 </head>
 <body>
@@ -141,10 +181,16 @@
             <img id="image" alt="生成的图片">
         </div>
         <div id="error" class="error-message"></div>
+
+        <!-- PayPal 按钮部分 -->
+        <div id="paypal-container-HVMS4SP27FCSU" style="margin-top: 20px;"></div>
     </div>
     
-<script src="https://www.paypal.com/sdk/js?client-id=BAAhxFN6lafAY2VbpY7m1Jy8o5JCWezMHEUgRAmHnOzv7gdSNtIIHKdwV7OjzlNirENkm5ZDLd8ZEWIpMs&components=hosted-buttons&disable-funding=venmo&currency=USD"></script> <div id="paypal-container-HVMS4SP27FCSU"></div> <script> paypal.HostedButtons({ hostedButtonId: "HVMS4SP27FCSU", }).render("#paypal-container-HVMS4SP27FCSU") </script>
-    
+    <script src="https://www.paypal.com/sdk/js?client-id=BAAhxFN6lafAY2VbpY7m1Jy8o5JCWezMHEUgRAmHnOzv7gdSNtIIHKdwV7OjzlNirENkm5ZDLd8ZEWIpMs&components=hosted-buttons&disable-funding=venmo&currency=USD"></script> 
+    <script> 
+        paypal.HostedButtons({ hostedButtonId: "HVMS4SP27FCSU", }).render("#paypal-container-HVMS4SP27FCSU") 
+    </script>
+
     <script>
         // 调用 Hugging Face API 生成图像
         async function query(data) {
